<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.example.android.musicstructureappproject.MainActivity">

    <LinearLayout
        android:id="@+id/nowPlayingBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <TextView
            style="@style/EightDPMarginPadding"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/now_playing" />

        <TextView
            style="@style/EightDPMarginPadding"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/song_now_playing" />

        <ImageView
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:background="@drawable/album_place_holder" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_playing_view_explanation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/main_library_screen_explanation" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/toAlbumsList"
                style="@style/EightDPMarginPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:background="@color/colorAccent"
                android:text="@string/album_tag" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_library_screen_explanation" />

            <LinearLayout
                android:id="@+id/albums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        style="@style/EightDPMarginPadding"
                        android:layout_width="0dp"
                        android:layout_height="88dp"
                        android:layout_weight="1"
                        android:background="@drawable/album_place_holder" />

                    <ImageButton
                        style="@style/EightDPMarginPadding"
                        android:layout_width="0dp"
                        android:layout_height="88dp"
                        android:layout_weight="1"
                        android:background="@drawable/album_place_holder" />

                    <ImageButton
                        style="@style/EightDPMarginPadding"
                        android:layout_width="0dp"
                        android:layout_height="88dp"
                        android:layout_weight="1"
                        android:background="@drawable/album_place_holder" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        style="@style/EightDPMarginPadding"
                        android:layout_width="0dp"
                        android:layout_height="88dp"
                        android:layout_weight="1"
                        android:background="@drawable/album_place_holder" />

                    <ImageButton
                        style="@style/EightDPMarginPadding"
                        android:layout_width="0dp"
                        android:layout_height="88dp"
                        android:layout_weight="1"
                        android:background="@drawable/album_place_holder" />

                    <ImageButton
                        style="@style/EightDPMarginPadding"
                        android:layout_width="0dp"
                        android:layout_height="88dp"
                        android:layout_weight="1"
                        android:background="@drawable/album_place_holder" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/toSongsList"
                style="@style/EightDPMarginPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:background="@color/colorAccent"
                android:text="@string/song_tag" />

            <LinearLayout
                android:id="@+id/playSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/EightDPMarginPadding"
                        android:layout_width="0dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:background="@color/textSecondary"
                        android:text="@string/now_playing" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/album_place_holder" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/EightDPMarginPadding"
                        android:layout_width="0dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:background="@color/textSecondary"
                        android:text="@string/now_playing" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/album_place_holder" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/EightDPMarginPadding"
                        android:layout_width="0dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:background="@color/textSecondary"
                        android:text="@string/now_playing" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/album_place_holder" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/EightDPMarginPadding"
                        android:layout_width="0dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:background="@color/textSecondary"
                        android:text="@string/now_playing" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/album_place_holder" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_button_explanation" />

            <ImageView
                android:id="@+id/backToSelect"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/back_button" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
